--- a/marketing/03-proxy-info.yaml
+++ b/marketing/03-proxy-info.yaml
@@ -3,7 +3,7 @@ apiVersion: projectcontour.io/v1
 kind: HTTPProxy
 metadata:
   name: www
-  namespace: teama
+  namespace: marketing
 spec:
   routes:
   - services:
