--- a/01-app.yaml
+++ b/01-app.yaml
@@ -1,14 +1,17 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: app
-  namespace: default
+  name: rootapp
+  namespace: root-proxies
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: rootapp
   template:
     metadata:
       labels:
-        app: app
+        app: rootapp
     spec:
       containers:
       - name: echo
@@ -25,14 +28,56 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: app
-  name: app
-  namespace: default
+    app: rootapp
+  name: rootapp
+  namespace: root-proxies
 spec:
   ports:
   - port: 80
     protocol: TCP
     targetPort: 8080
   selector:
-    app: app
+    app: rootapp
+  type: ClusterIP
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: secureapp
+  namespace: root-proxies
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: secureapp
+  template:
+    metadata:
+      labels:
+        app: secureapp
+    spec:
+      containers:
+      - name: echo
+        image: stevesloka/echo-server
+        command: ["echo-server"]
+        args:
+          - --echotext=This is the secure app site!
+        imagePullPolicy: IfNotPresent
+        ports:
+          - name: http
+            containerPort: 8080
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app: secureapp
+  name: secureapp
+  namespace: root-proxies
+spec:
+  ports:
+  - port: 80
+    protocol: TCP
+    targetPort: 8080
+  selector:
+    app: secureapp
   type: ClusterIP
