--- a/marketing/02-proxy-wwwblog.yaml
+++ b/marketing/02-proxy-wwwblog.yaml
@@ -3,16 +3,29 @@ apiVersion: projectcontour.io/v1
 kind: HTTPProxy
 metadata:
   name: blogsite
-  namespace: teama
+  namespace: marketing
 spec:
-  includes:
-  - name: www
-    namespace: teama
-    conditions:
-    - prefix: /info
   routes:
   - services:
     - name: wwwblog
       port: 80
-    conditions:
-      - prefix: /
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#  includes:
+#   - name: www
+#     namespace: marketing
+#     conditions:
+#     - prefix: /info
