--- a/marketing/04-green-deployment.yaml
+++ b/marketing/04-green-deployment.yaml
@@ -1,24 +1,24 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: info
+  name: green
   namespace: marketing
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: info
+      app: green
   template:
     metadata:
       labels:
-        app: info
+        app: green
     spec:
       containers:
       - name: echo
         image: stevesloka/echo-server
         command: ["echo-server"]
         args:
-          - --echotext=This is the INFO site!
+          - --echotext=This is the green site!
         imagePullPolicy: IfNotPresent
         ports:
           - name: http
@@ -28,8 +28,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: info
-  name: info
+    app: green
+  name: green
   namespace: marketing
 spec:
   ports:
@@ -37,5 +37,5 @@ spec:
     protocol: TCP
     targetPort: 8080
   selector:
-    app: info
+    app: green
   type: ClusterIP
