--- a/auth/certmanager/03-secret.yaml
+++ b/auth/certmanager/03-secret.yaml
@@ -1,10 +1,15 @@
+
+# $ htpasswd -b auth user1 password1
+# $ htpasswd -b auth user2 password2
+# $ htpasswd -b auth user3 password3
+
 ---
 apiVersion: v1
 kind: Secret
 type: Opaque
 metadata:
   name: passwords
-  namespace: root-proxies
+  namespace: projectcontour-auth
   annotations:
     projectcontour.io/auth-type: basic
 data:
