--- a/auth/certmanager/04-extensionservice.yaml
+++ b/auth/certmanager/04-extensionservice.yaml
@@ -3,7 +3,7 @@ apiVersion: projectcontour.io/v1alpha1
 kind: ExtensionService
 metadata:
   name: htpasswd
-  namespace: root-proxies
+  namespace: projectcontour-auth
 spec:
   protocol: h2
   services:
