--- a/02-proxy-default.yaml
+++ b/02-proxy-default.yaml
@@ -1,17 +1,23 @@
 apiVersion: projectcontour.io/v1
 kind: HTTPProxy
 metadata:
-  name: root-containersteve
+  name: root
   namespace: root-proxies
 spec:
   virtualhost:
-    fqdn: local.projectcontour.io
+    fqdn: stevesloka.dev
+    tls:
+      secretName: steveslokadev-tls
   routes:
   - services:
     - name: rootapp
       port: 80
     conditions:
     - prefix: /
+
+
+
+
 
 
 
@@ -41,7 +47,6 @@ spec:
   #   extensionRef:
   #     name: htpasswd
   #     namespace: root-proxies
-
 
 
 
