--- a/auth/certmanager/01-prereq.yaml
+++ b/auth/certmanager/01-prereq.yaml
@@ -2,13 +2,13 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: projectcontour-auth-htpasswd
-  namespace: root-proxies
+  namespace: projectcontour-auth
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: projectcontour:authserver:htpasswd
-  namespace: root-proxies
+  namespace: projectcontour-auth
 rules:
   - apiGroups:
       - ""
@@ -23,7 +23,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: projectcontour:authserver:htpasswd
-  namespace: root-proxies
+  namespace: projectcontour-auth
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -31,7 +31,7 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: projectcontour-auth-htpasswd
-    namespace: root-proxies
+    namespace: projectcontour-auth
 ---
 apiVersion: cert-manager.io/v1alpha3
 kind: ClusterIssuer
