--- a/certs/issuer.yaml
+++ b/certs/issuer.yaml
@@ -1,8 +1,8 @@
-apiVersion: cert-manager.io/v1alpha2
+apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: letsencrypt-prod-dns
-  namespace: projectcontour-roots
+  namespace: root-proxies
 spec:
   acme:
     # The ACME server URL
@@ -17,4 +17,4 @@ spec:
     # An empty 'selector' means that this solver matches all domains
     - http01:
         ingress:
-          class: contour
+          class: 
