--- a/auth/certmanager/02-certificate.yaml
+++ b/auth/certmanager/02-certificate.yaml
@@ -1,26 +1,26 @@
----
+# ---
+# apiVersion: cert-manager.io/v1alpha3
+# kind: Certificate
+# metadata:
+#   name: htpasswd
+#   namespace: projectcontour-auth
+# spec:
+#   dnsNames:
+#   - htpasswd
+#   issuerRef:
+#     kind: ClusterIssuer
+#     name: selfsigned
+#   secretName: htpasswd
+# ---
 apiVersion: cert-manager.io/v1alpha3
 kind: Certificate
 metadata:
-  name: htpasswd
-  namespace: projectcontour-auth
+  name: tlscert
+  namespace: projectcontour-roots
 spec:
   dnsNames:
-  - htpasswd
-  issuerRef:
-    kind: ClusterIssuer
-    name: selfsigned
-  secretName: htpasswd
----
-apiVersion: cert-manager.io/v1alpha3
-kind: Certificate
-metadata:
-  name: ingress-conformance-echo
-  namespace: root-proxies
-spec:
-  dnsNames:
-  - local.projectcontour.io
-  secretName: ingress-conformance-echo
+  - rootapp
+  secretName: tlscert
   issuerRef:
     name: selfsigned
     kind: ClusterIssuer
