update techtalk examples
Signed-off-by: Steve Sloka <slokas@vmware.com>

--- a/techtalk/httpproxy/01-root.yaml
+++ b/techtalk/httpproxy/01-root.yaml
@@ -6,12 +6,17 @@ metadata:
 spec:
   virtualhost:
     fqdn: local.projectcontour.io
+  includes:
+  - name: blogsite
+    namespace: marketing
+    conditions:
+    - prefix: /blog
   routes:
   - services:
     - name: rootapp
       port: 80
-    conditions:
-    - prefix: /
+
+
 
 
 
